--- a/api-gateway/lambda/image-transform/package.json
+++ b/api-gateway/lambda/image-transform/package.json
@@ -2,11 +2,24 @@
   "name": "image-transform-lambda",
   "version": "1.0.0",
   "description": "Lambda function for dynamic image transformation",
-  "main": "index.js",
+  "main": "dist/index.js",
+  "type": "commonjs",
+  "scripts": {
+    "build": "esbuild src/index.ts --bundle --minify --sourcemap --platform=node --target=es2020 --format=cjs --outfile=dist/index.js",
+    "clean": "rm -rf dist",
+    "prebuild": "npm run clean",
+    "docker:build": "docker build -t image-transform-lambda .",
+    "docker:run": "docker run --rm -p 9000:8080 image-transform-lambda"
+  },
   "dependencies": {
+    "@aws-sdk/client-rekognition": "^3.0.0",
     "@aws-sdk/client-s3": "^3.0.0",
     "@aws-sdk/client-secrets-manager": "^3.0.0",
-    "@aws-sdk/client-rekognition": "^3.0.0"
+    "@types/aws-lambda": "^8.10.152",
+    "sharp": "^0.33.5"
+  },
+  "devDependencies": {
+    "esbuild": "0.25.9"
   },
   "engines": {
     "node": ">=18.0.0"
