--- a/api-gateway/lambda/image-transform/package.json
+++ b/api-gateway/lambda/image-transform/package.json
@@ -5,23 +5,23 @@
   "main": "dist/index.js",
   "type": "commonjs",
   "scripts": {
-    "build": "esbuild src/index.ts --bundle --minify --sourcemap --platform=node --target=es2020 --format=cjs --outfile=dist/index.js",
+    "build": "esbuild src/index.ts --bundle --minify --sourcemap --platform=node --target=es2022 --format=cjs --outfile=dist/index.js",
     "clean": "rm -rf dist",
     "prebuild": "npm run clean",
     "docker:build": "docker build -t image-transform-lambda .",
     "docker:run": "docker run --rm -p 9000:8080 image-transform-lambda"
   },
   "dependencies": {
-    "@aws-sdk/client-rekognition": "^3.0.0",
-    "@aws-sdk/client-s3": "^3.0.0",
-    "@aws-sdk/client-secrets-manager": "^3.0.0",
+    "@aws-sdk/client-rekognition": "^3.700.0",
+    "@aws-sdk/client-s3": "^3.700.0",
+    "@aws-sdk/client-secrets-manager": "^3.700.0",
     "@types/aws-lambda": "^8.10.152",
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "esbuild": "0.25.9"
+    "esbuild": "^0.25.9"
   },
   "engines": {
-    "node": ">=18.0.0"
+    "node": ">=22.0.0"
   }
 }
