feat: @types/node追加

--- a/api-gateway/lambda/image-transform/package.json
+++ b/api-gateway/lambda/image-transform/package.json
@@ -19,7 +19,8 @@
     "sharp": "^0.33.5"
   },
   "devDependencies": {
-    "esbuild": "^0.25.9"
+    "esbuild": "^0.25.9",
+    "@types/node": "^22.10.1"
   },
   "engines": {
     "node": ">=22.0.0"
