--- a/s3-object-lambda/lambda/pyproject.toml
+++ b/s3-object-lambda/lambda/pyproject.toml
@@ -1,12 +1,13 @@
 [project]
-name = "lambda"
-version = "0.1.0"
-description = "Add your description here"
+name = "s3-object-lambda-image-processing"
+version = "1.0.0"
+description = "S3 Object Lambda for dynamic image processing with comprehensive features"
 readme = "README.md"
 requires-python = ">=3.11"
 dependencies = [
     "boto3>=1.40.21",
     "pillow>=11.3.0",
+    "botocore>=1.31.0",
 ]
 
 [dependency-groups]
